--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-Groq_api_key="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"
-GEMINI_API_KEY="AIzaSyDc7cWdoc5asb3O_pD7tWj7PTK8xhl5Ghk"
+Groq_api_key="Use Your API Key"
+GEMINI_API_KEY="Use Your API Key"
